crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_i32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: i32, b: i32) -> i32 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: i32, b: i32) -> i32 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: i32, b: i32) -> i32 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: i32, b: i32) -> i32 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: i32, b: i32) -> i32 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: i32, b: i32) -> i32 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @assign(i32 %0, i32 %1) {
body:
  ret i32 %1
}

define i32 @assign_add(i32 %0, i32 %1) {
body:
  %add = add i32 %0, %1
  ret i32 %add
}

define i32 @assign_subtract(i32 %0, i32 %1) {
body:
  %sub = sub i32 %0, %1
  ret i32 %sub
}

define i32 @assign_multiply(i32 %0, i32 %1) {
body:
  %mul = mul i32 %0, %1
  ret i32 %mul
}

define i32 @assign_divide(i32 %0, i32 %1) {
body:
  %div = sdiv i32 %0, %1
  ret i32 %div
}

define i32 @assign_remainder(i32 %0, i32 %1) {
body:
  %rem = srem i32 %0, %1
  ret i32 %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
